linstaller (1.51.0~pre3-1) UNRELEASED; urgency=low

  * partdisks: library: added is_disk() and device_sort() functions
  * partdisks: library: return_device() correctly works on freespace
    partitions.
  * partdisks: use device_sort() to return a sorted list of what we
    should commit.
  * partdisks: set touched in automatic partitioning.
  * partdisks: do not format if in interactive editor, swap is selected
    but swap_noformat preseed is true.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sat, 20 Aug 2011 00:11:49 +0200

linstaller (1.51.0~pre2-1) emily; urgency=low

  * linstaller_wrapper.sh: launch linstaller with sudo
  * partdisks: added a missing )
  * linstaller_alan.py: fixed command
  * partdisks: do not process freespace (/dev/sdx-1) partitions
  * partdisks: do not ask for filesystem when adding a partition; the user
    should add one later.
  * partdisks: library: support for partitions with None filesystem.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 18 Aug 2011 17:21:38 +0200

linstaller (1.51.0~pre1-1) emily; urgency=low

  * Added alan extension and its relevant alan-ext-linstaller package
  * New wrapper for linstaller that displays "Press ENTER to close" if
    linstaller has failed (prevents the immediate destroy of the
    terminal window)
  * Added copyright (python-stdeb didn't have created one :/)
  * Added new live-config-linstaller package.
  * partdisks: do not fail if no swap is available/selected
  * partdisks: mount empty partitions that have "useas" correctly defined
  * linstaller.py: read frontend from command-line args, do not use the
    frontend variable on configuration anymore.
    If -f|--frontend is not specified, default to 'cli'
  * config/semplice-base: removed 'frontend' variable

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 14 Aug 2011 17:39:58 +0200

linstaller (1.50.0-1) emily; urgency=low

  * Build-Depend too on python2.7
